# grain-id

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  build.rs  deny.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
examples/caretta-id-cli/: Cargo.toml
examples/caretta-id-cli/src/command/: decode.rs  encode.rs  generate.rs
examples/caretta-id-cli/src/option/: mod.rs
examples/caretta-id-cli/tests/: decode.rs  encode.rs  generate.rs  random.rs  timestamp.rs
examples/caretta-id-prost-example/proto/: caretta_id_example.proto
examples/grain-id-cli/: CHANGELOG.md  Cargo.toml  README.md
examples/grain-id-cli/src/: main.rs
examples/grain-id-cli/src/command/: decode.rs  encode.rs  hash.rs  mod.rs  random.rs  timestamp.rs
examples/grain-id-cli/tests/: hash.rs
src/: alphabet.rs  caretta_id.rs  core.rs  digest.rs  error.rs  grain_id.rs  lib.rs  macros.rs  prefix.rs  prost.rs  proto.rs  rand.rs  rusqlite.rs  schemars.rs  serde.rs
tests/: default.rs  prost.rs  rand.rs  schemars.rs  sea_orm.rs  serde.rs
