[package]
name = "grain-id"
edition.workspace = true
version.workspace = true
description = "Compact, human-readable unique IDs — grain-sized, yet enough for a lifetime"
categories = ["data-structures", "encoding", "no-std", "no-std::no-alloc"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme = "README.md"
exclude = ["/.github", "/.gitignore", "/.vscode", "/CHANGELOG.md", "/SPECS.md", "/.gitmodules", "/.rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true

[features]
default=["rand", "std"]
std = ["rand?/thread_rng", "serde?/std"]
rand = ["dep:rand",]
arbitrary = ["std", "dep:arbitrary"]
digest = ["dep:digest"]
prost = ["dep:prost"]
rusqlite = ["std", "dep:rusqlite"]
schemars = ["dep:schemars"]
sea-orm = ["std", "dep:sea-orm"]
serde = [ "dep:serde"]

[dependencies]
arbitrary = { version = "1", optional = true }
digest = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
rand = { workspace = true, default-features = false, optional = true }
rusqlite = { version = "0.39.0", default-features = false, optional = true }
schemars = { version = "1.2.1", default-features = false, optional = true }
sea-orm = { version = "1.1.16", default-features = false, optional = true }
serde = { version = "1.0.219", default-features = false,  optional = true }
thiserror = { version = "2.0.12", default-features = false}

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
chrono.workspace = true
serde_test = "1.0.177"
serde = { version = "1.0.219", default-features = false, features = ["derive"]}
sea-orm = { version = "1.1.16", default-features = false, features = ["macros", "mock"]}
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt"] }
rand = { workspace = true, default-features = false, features = ["thread_rng"]}
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
jsonschema = "0.46"
serde_json = "1.0"

[workspace]
members = [".", "examples/grain-id-cli", "examples/grain-id-prost-example"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/grain-id"
homepage = "https://github.com/fluo10/grain-id"
keywords = ["id", "identifier", "uuid", "distributed", "human-readable"]
version = "0.15.0"

[workspace.dependencies]
chrono = "0.4.42"
digest = { version = "0.11", default-features = false }
md-5 = { version = "0.11", default-features = false }
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
prost-build = "0.14.1"
rand = {version = "0.10.0", default-features = false}
sha1 = { version = "0.11", default-features = false }
sha2 = { version = "0.11", default-features = false }
sha3 = { version = "0.11.0-rc.9", default-features = false }
