[package]
name = "grain-id-cli"
edition.workspace = true
description = "Reference tool to generate/encode/decode grain-id"
categories = ["command-line-utilities"]
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
readme = "README.md"

[[bin]]
name = "grain-id"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono.workspace = true
clap = { version = "4.5.48", features = ["derive"] }
grain-id = { path = "../..", version = "0.14.0", features = ["digest"] }
md-5 = { version = "0.10", default-features = false }
rand.workspace = true
sha1 = { version = "0.11", default-features = false }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
digest = { version = "0.10", default-features = false }
grain-id = { path = "../..", version = "0.14.0", features = ["digest"] }
md-5 = { version = "0.10", default-features = false }
sha1 = { version = "0.11", default-features = false }
sha2 = { version = "0.10", default-features = false }
tempfile = "3"
