[package]
name = "grain-id-cli"
edition.workspace = true
description = "Reference tool to generate/encode/decode grain-id"
categories = ["command-line-utilities"]
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
readme = "README.md"

[[bin]]
name = "grain-id"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono.workspace = true
clap = { version = "4.5.48", features = ["derive"] }
grain-id = { path = "../..", version = "0.15.0", features = ["digest"] }
md-5.workspace = true
rand.workspace = true
sha1.workspace = true
sha2.workspace = true

[dev-dependencies]
digest.workspace = true
grain-id = { path = "../..", version = "0.15.0", features = ["digest"] }
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
tempfile = "3"
